// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui/atoms/overlay/Overlay renders correctly className correctly passed 1`] = `
<div
  className="absolute top-0 right-0 left-0 w-full h-full bg-gray-900 opacity-40 bg-white"
/>
`;

exports[`ui/atoms/overlay/Overlay renders correctly normal mode 1`] = `
<div
  className="absolute top-0 right-0 left-0 w-full h-full bg-gray-900 opacity-40"
/>
`;
